--- a/css/style.css
+++ b/css/style.css
@@ -349,15 +349,28 @@
   --emu-background-opacity-window: 1;
   --emu-background-opacity-window-content: 1;
   --emu-subtle-opacity: 0.3;
-  --color-shadow-primary: white;
+  --color-shadow-primary: var(--blades-white-bright);
+  --color-text-dark-primary: var(--blades-white);
+  --color-bg-option: var(--blades-black);
   --blades-white: rgb(200, 200, 200);
   --blades-white-bright: rgb(255, 255, 255);
   --blades-black: #101010;
   --blades-black-dark: #000;
   --blades-grey: #777;
+  --blades-grey-dark: #444;
   --blades-coin-gold: rgb(171,146,84);
   --blades-coin-gold-bright: rgb(253,212,112);
   font-family: "Minion Pro Caption Cond"; }
+  * .eunos-blades.sheet textarea {
+    color: var(--blades-white);
+    font-family: "Minion Pro Caption";
+    margin: 0;
+    font-size: 12px;
+    line-height: 16px; }
+  * .eunos-blades.sheet .label-stripe {
+    background-color: var(--blades-grey); }
+  * .eunos-blades.sheet.actor.pc .clock-zero-label {
+    color: var(--blades-white); }
   * .eunos-blades.sheet.actor.pc .stripe, * .eunos-blades.sheet.actor.pc .stripe label {
     background-color: var(--blades-white) !important;
     color: var(--blades-black) !important; }
@@ -376,38 +389,41 @@
     font-size: 20px;
     line-height: 24px;
     padding: 3px; }
-  * .eunos-blades.sheet.actor.pc .name-alias .name-box, * .eunos-blades.sheet.actor.pc .name-alias .alias-box {
+  * .eunos-blades.sheet.actor.pc section.name-alias .portrait {
+    max-height: 170px; }
+  * .eunos-blades.sheet.actor.pc section.name-alias .name-box, * .eunos-blades.sheet.actor.pc section.name-alias .alias-box {
     font-family: "Historical FellType"; }
-    * .eunos-blades.sheet.actor.pc .name-alias .name-box label, * .eunos-blades.sheet.actor.pc .name-alias .alias-box label {
+    * .eunos-blades.sheet.actor.pc section.name-alias .name-box label, * .eunos-blades.sheet.actor.pc section.name-alias .alias-box label {
       display: none; }
-    * .eunos-blades.sheet.actor.pc .name-alias .name-box input, * .eunos-blades.sheet.actor.pc .name-alias .alias-box input {
+    * .eunos-blades.sheet.actor.pc section.name-alias .name-box input, * .eunos-blades.sheet.actor.pc section.name-alias .alias-box input {
       border-radius: 0;
       border: none;
       background: var(--blades-black-dark);
       height: 50px;
       color: var(--blades-white);
       font-size: 32px; }
-      * .eunos-blades.sheet.actor.pc .name-alias .name-box input:focus, * .eunos-blades.sheet.actor.pc .name-alias .alias-box input:focus {
+      * .eunos-blades.sheet.actor.pc section.name-alias .name-box input:focus, * .eunos-blades.sheet.actor.pc section.name-alias .alias-box input:focus {
         -webkit-box-shadow: none;
         box-shadow: none;
         outline: 2px outset rgba(178, 178, 178, 0.5); }
-    * .eunos-blades.sheet.actor.pc .name-alias .name-box.name-box, * .eunos-blades.sheet.actor.pc .name-alias .alias-box.name-box {
-      width: 130%; }
-    * .eunos-blades.sheet.actor.pc .name-alias .name-box.alias-box, * .eunos-blades.sheet.actor.pc .name-alias .alias-box.alias-box {
+    * .eunos-blades.sheet.actor.pc section.name-alias .name-box.name-box, * .eunos-blades.sheet.actor.pc section.name-alias .alias-box.name-box {
+      width: 120%; }
+    * .eunos-blades.sheet.actor.pc section.name-alias .name-box.alias-box, * .eunos-blades.sheet.actor.pc section.name-alias .alias-box.alias-box {
       position: relative;
       width: 80%;
-      left: 30%;
+      left: 20%;
       font-family: "Kirsty"; }
-      * .eunos-blades.sheet.actor.pc .name-alias .name-box.alias-box input, * .eunos-blades.sheet.actor.pc .name-alias .alias-box.alias-box input {
+      * .eunos-blades.sheet.actor.pc section.name-alias .name-box.alias-box input, * .eunos-blades.sheet.actor.pc section.name-alias .alias-box.alias-box input {
         color: var(--blades-white-bright); }
-  * .eunos-blades.sheet.actor.pc .name-alias .character-traits > .item-block {
+  * .eunos-blades.sheet.actor.pc section.name-alias .character-traits > .item-block {
     display: grid;
     grid-template-columns: 70px 1fr;
     width: 100%;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between; }
-    * .eunos-blades.sheet.actor.pc .name-alias .character-traits > .item-block .item-class-label {
+    justify-content: space-between;
+    max-height: 28px; }
+    * .eunos-blades.sheet.actor.pc section.name-alias .character-traits > .item-block .item-class-label {
       -webkit-box-flex: 0;
       -ms-flex-positive: 0;
       flex-grow: 0;
@@ -417,8 +433,9 @@
       flex-basis: 25%;
       text-align: right;
       padding-right: 5px;
-      color: var(--blades-white); }
-    * .eunos-blades.sheet.actor.pc .name-alias .character-traits > .item-block .item {
+      color: var(--blades-white);
+      margin-bottom: 3px; }
+    * .eunos-blades.sheet.actor.pc section.name-alias .character-traits > .item-block .item {
       -webkit-box-flex: 1;
       -ms-flex-positive: 1;
       flex-grow: 1;
@@ -426,54 +443,151 @@
       font-size: 16px;
       line-height: 19px;
       white-space: nowrap; }
-      * .eunos-blades.sheet.actor.pc .name-alias .character-traits > .item-block .item .item-body img {
+      * .eunos-blades.sheet.actor.pc section.name-alias .character-traits > .item-block .item .item-body img {
         position: relative;
         top: -2px;
         margin-right: 2px; }
-    * .eunos-blades.sheet.actor.pc .name-alias .character-traits > .item-block .item-control {
+    * .eunos-blades.sheet.actor.pc section.name-alias .character-traits > .item-block .item-control {
       -ms-flex-preferred-size: 10px;
       flex-basis: 10px;
       text-align: right;
       padding-right: 4px;
       color: var(--blades-white); }
-  * .eunos-blades.sheet.actor.pc .coin-box .stripe, * .eunos-blades.sheet.actor.pc .coin-box .stripe label {
+  * .eunos-blades.sheet.actor.pc section.name-alias .coin-box .stripe, * .eunos-blades.sheet.actor.pc section.name-alias .coin-box .stripe label {
     background: var(--blades-black-dark) !important;
     color: var(--blades-white) !important;
     margin-bottom: 10px; }
-  * .eunos-blades.sheet.actor.pc .coin-box .coins input ~ label {
+  * .eunos-blades.sheet.actor.pc section.name-alias .coin-box .coins input ~ label {
     background-color: var(--blades-coin-gold);
     border: 1px var(--blades-coin-gold-bright) outset;
     border-radius: 15px; }
-    * .eunos-blades.sheet.actor.pc .coin-box .coins input ~ label[for$="0"] {
+    * .eunos-blades.sheet.actor.pc section.name-alias .coin-box .coins input ~ label[for$="0"] {
       border-width: 2px;
       border-radius: 0;
       -webkit-filter: brightness(1.5);
       filter: brightness(1.5); }
-  * .eunos-blades.sheet.actor.pc .coin-box .coins input:checked ~ label {
+  * .eunos-blades.sheet.actor.pc section.name-alias .coin-box .coins input:checked ~ label {
     background-color: rgba(128, 128, 128, 0.2);
     border-style: inset;
     border-color: var(--blades-grey);
     -webkit-filter: none;
     filter: none; }
-  * .eunos-blades.sheet.actor.pc .coin-box .coin-hands-box {
+  * .eunos-blades.sheet.actor.pc section.name-alias .coin-box .coins input:checked + label {
+    background-color: var(--blades-coin-gold);
+    border-color: var(--blades-coin-gold-bright);
+    border-style: outset; }
+  * .eunos-blades.sheet.actor.pc section.name-alias .coin-box .coin-hands-box {
     margin-right: 10px;
     min-width: 45px; }
-  * .eunos-blades.sheet.actor.pc .big-teeth-section {
-    border-color: var(--blades-white); }
-    * .eunos-blades.sheet.actor.pc .big-teeth-section .trauma-list label .checkmark {
+    * .eunos-blades.sheet.actor.pc section.name-alias .coin-box .coin-hands-box .coins-hands {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      width: 100%; }
+  * .eunos-blades.sheet.actor.pc section.big-teeth-section {
+    border-color: var(--blades-white);
+    max-height: 60px;
+    margin-top: 0px; }
+    * .eunos-blades.sheet.actor.pc section.big-teeth-section .trauma-list label .checkmark {
       font-size: 16px; }
-  * .eunos-blades.sheet.actor.pc .attributes .attribute > div:last-of-type {
-    margin-bottom: 10px; }
-  * .eunos-blades.sheet.actor.pc .attributes .attribute .attributes-container label {
+  * .eunos-blades.sheet.actor.pc section.harm-armor .character-harm table tr {
+    background-color: rgba(255, 255, 255, 0.05); }
+    * .eunos-blades.sheet.actor.pc section.harm-armor .character-harm table tr:nth-child(2) {
+      background-color: rgba(255, 255, 255, 0.1); }
+  * .eunos-blades.sheet.actor.pc section.harm-armor .character-harm table input[type="text"] {
+    font-family: "IM FELL Double Pica SC"; }
+  * .eunos-blades.sheet.actor.pc section.abilities .item .item-body * {
+    margin-right: unset;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto; }
+  * .eunos-blades.sheet.actor.pc section.abilities .item .item-body .item-name {
+    font-weight: bold;
+    color: var(--blades-white-bright); }
+  * .eunos-blades.sheet.actor.pc section.abilities .item .item-body .item-description {
+    margin: 0 10px; }
+  * .eunos-blades.sheet.actor.pc section.abilities .item .item-control {
+    max-width: 30px; }
+  * .eunos-blades.sheet.actor.pc section.abilities .nav-panel nav {
     background-color: var(--blades-white);
-    border: 1px var(--blades-white) outset;
+    padding: 0 10px; }
+    * .eunos-blades.sheet.actor.pc section.abilities .nav-panel nav .item {
+      color: var(--blades-black);
+      padding: 0 10px; }
+      * .eunos-blades.sheet.actor.pc section.abilities .nav-panel nav .item.active {
+        background-color: var(--blades-white-bright); }
+      * .eunos-blades.sheet.actor.pc section.abilities .nav-panel nav .item:hover {
+        color: var(--blades-black-dark);
+        background-color: var(--blades-white-bright); }
+  * .eunos-blades.sheet.actor.pc section.abilities .loadout .load-amount {
+    font-size: 26px;
+    line-height: 28px;
+    position: absolute;
+    background-color: var(--blades-white);
+    display: inline-block;
+    width: 28px;
+    text-align: center;
+    border-radius: 16px;
+    height: 28px;
+    top: 2px;
+    -webkit-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    transform: translateX(-30px);
+    color: var(--blades-black); }
+  * .eunos-blades.sheet.actor.pc section.abilities .loadout .load-slash {
+    color: var(--blades-grey-dark);
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 5px;
+    margin: 0 3px;
+    position: relative;
+    top: 3px;
+    display: none; }
+  * .eunos-blades.sheet.actor.pc section.abilities .loadout .load-level {
+    margin-left: 2px; }
+  * .eunos-blades.sheet.actor.pc section.abilities .loadout select {
+    margin: 3px -6px auto auto; }
+  * .eunos-blades.sheet.actor.pc section.abilities .notes {
+    -webkit-box-flex: initial;
+    -ms-flex: initial;
+    flex: initial;
+    font-size: inherit;
+    line-height: inherit;
+    margin: 0; }
+    * .eunos-blades.sheet.actor.pc section.abilities .notes .label-stripe {
+      margin-bottom: 0; }
+  * .eunos-blades.sheet.actor.pc section.abilities .effects .effects-list th.item-name {
+    width: 150px; }
+  * .eunos-blades.sheet.actor.pc section.abilities .effects .effects-list td.effect-name {
+    width: 80px; }
+    * .eunos-blades.sheet.actor.pc section.abilities .effects .effects-list td.effect-name h4 {
+      display: inline;
+      position: relative;
+      top: -6px; }
+  * .eunos-blades.sheet.actor.pc section.abilities .effects .effects-list td.effect-source {
+    width: 125px;
+    text-align: right !important; }
+  * .eunos-blades.sheet.actor.pc section.abilities .attributes .attribute > div:last-of-type {
+    margin-bottom: 10px; }
+  * .eunos-blades.sheet.actor.pc section.abilities .attributes .attribute .attributes-container label {
+    background-color: var(--blades-white);
+    border: 1px var(--blades-white-bright) outset;
     border-radius: 15px; }
-    * .eunos-blades.sheet.actor.pc .attributes .attribute .attributes-container label[for$="0"] {
-      background-color: var(--blades-black) !important; }
-  * .eunos-blades.sheet.actor.pc .attributes .attribute .attributes-container input:checked ~ label {
+    * .eunos-blades.sheet.actor.pc section.abilities .attributes .attribute .attributes-container label[for$="0"] {
+      background-color: var(--blades-black) !important;
+      margin-right: 5px; }
+  * .eunos-blades.sheet.actor.pc section.abilities .attributes .attribute .attributes-container input:checked ~ label {
     background-color: rgba(128, 128, 128, 0.2);
-    border: 1px solid var(--blades-white); }
-  * .eunos-blades.sheet.actor.pc .attributes .attribute .attributes-container .attribute-skill-label {
+    border-style: inset;
+    border-color: var(--blades-grey);
+    -webkit-filter: none;
+    filter: none; }
+  * .eunos-blades.sheet.actor.pc section.abilities .attributes .attribute .attributes-container input:checked + label {
+    background-color: var(--blades-white);
+    border-color: var(--blades-white-bright);
+    border-style: outset; }
+  * .eunos-blades.sheet.actor.pc section.abilities .attributes .attribute .attributes-container .attribute-skill-label {
+    color: var(--blades-white-bright);
     line-height: 14px; }
 
 .eunos-blades {
